# nuc-video-mesh

./: .gitignore  CMakeLists.txt  README.MD
src/: main.cpp
